# VDF

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  LICENSE  README.md  keyvalues.c  keyvalues.h
samples/: CMakeLists.txt  access.c  contexts.c  errors.c  include_1.vdf  include_2.vdf  includes.c  iteration.c  reading.c  sample.vdf  writing.c
